2006-04-19  Sven Neumann  <sven@gimp.org>

	* app/composite/make-installer.py: generate const arrays.

	* app/composite/gimp-composite-altivec-installer.c
	* app/composite/gimp-composite-generic-installer.c
	* app/composite/gimp-composite-mmx-installer.c
	* app/composite/gimp-composite-sse-installer.c
	* app/composite/gimp-composite-sse2-installer.c: regenerated.

2006-04-19  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: removed an unneeded call to
	gtk_widget_realize() (bug #324254). Sprinkled const qualifiers to
	avoid relocations.

2006-04-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: fixed bug in range calculation
	that caused display errors in the last row (bug #338378).

2006-04-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c (run): initialize global variables. Fixes
	bug #338373.

	* plug-ins/jpeg/NEWS: removed.

	* app/core/gimpparamspecs.c: indentation.

2006-04-18  Manish Singh  <yosh@gimp.org>

	* app/core/gimppickable.c (gimp_pickable_flush): do not return
	a value with void functions. Fixes bug #338904.

2006-04-18  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c: indentation.

2006-04-18  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-commands.c
	* app/config/gimpconfig-dump.c
	* app/core/gimpcontext.c
	* app/core/gimpdocumentlist.c
	* app/core/gimpparasitelist.c
	* app/display/gimpdisplayshell.c: avoid unnecessary relocations.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO

2006-04-18  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (siox_drb): sync parameter names with the
	declaration in the header file.

2006-04-18  Manish Singh  <yosh@gimp.org>

	* app/core/gimpparamspecs.c: void functions should not try to return
	values. Fixes bug #338792.

2006-04-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.c (gimp_clipboard_set_buffer): fix
	parameter name in API docs.
