@@ -296,16 +296,6 @@ CODE
 sub  path_get_point_at_dist {
     &std_pdb_deprecated('gimp-vectors-stroke-get-point-at-dist');
 
-    $help = <<'HELP';
-This will return the x,y position of a point at a given distance along the
-bezier curve. The distance will be obtained by first digitizing the 
-curve internally and then walking along the curve. For a closed curve the
-start of the path is the first point on the path that was created. This might
-not be obvious. Note the current path is used.
-HELP
-
-    &andy_pdb_misc('1999');
-
     @inargs = (
 	{ name => 'image', type => 'image',
 	  desc => 'The image the paths belongs to' },
